feat: create/update partial or complete basket
also switch to Java 11