@@ -5,13 +5,11 @@ import static org.assertj.core.groups.Tuple.tuple;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -24,6 +22,7 @@ import fr.inra.urgi.rarebasket.domain.BasketStatus;
 import fr.inra.urgi.rarebasket.domain.Customer;
 import fr.inra.urgi.rarebasket.domain.CustomerType;
 import fr.inra.urgi.rarebasket.domain.GrcContact;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -51,16 +50,55 @@ class BasketControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
+    private Basket basket;
+    private BasketItem rosa;
+    private BasketItem violetta;
+
+    private GrcContact john;
+    private GrcContact alice;
+
+    @BeforeEach
+    void prepare() {
+        john = new GrcContact(1L);
+        john.setEmail("john@mail.com");
+        alice = new GrcContact(2L);
+        alice.setEmail("alice@mail.com");
+
+        List.of(john, alice).forEach(
+            contact -> when(mockGrcContactDao.findByEmail(contact.getEmail())).thenReturn(Optional.of(contact))
+        );
+
+        basket = new Basket(42L);
+        basket.setReference("ref");
+        basket.setStatus(BasketStatus.DRAFT);
+        basket.setCustomer(new Customer("jb", "jb@mail.com", "Saint Just", CustomerType.FARMER));
+        basket.setRationale("why not?");
+
+        rosa = new BasketItem(5L);
+        rosa.setAccession("rosa");
+        rosa.setQuantity(2);
+        rosa.setContact(john);
+        basket.addItem(rosa);
+
+        violetta = new BasketItem(3L);
+        violetta.setAccession("violetta");
+        violetta.setQuantity(null);
+        violetta.setContact(alice);
+        basket.addItem(violetta);
+
+        when(mockBasketDao.findByReference(basket.getReference())).thenReturn(Optional.of(basket));
+    }
+
     @Test
     void shouldNotCreateEmptyBasket() throws Exception {
-        BasketCommandDTO command = new BasketCommandDTO(Collections.emptyList());
+        BasketCommandDTO command = new BasketCommandDTO(List.of());
         checkBadRequestWhenCreating(command);
     }
 
     @Test
-    void shouldNotCreateBasketWithItemWithInvalidEmail() throws Exception {
+    void shouldNotCreateBasketWithItemWithInvalidContactEmail() throws Exception {
         BasketCommandDTO command = new BasketCommandDTO(
-            Collections.singletonList(new BasketItemCommandDTO("rosa", "notAnEmail"))
+            List.of(new BasketItemCommandDTO("rosa", "notAnEmail"))
         );
         checkBadRequestWhenCreating(command);
     }
@@ -68,7 +106,7 @@ class BasketControllerTest {
     @Test
     void shouldNotCreateBasketWithItemWithBlankAccession() throws Exception {
         BasketCommandDTO command = new BasketCommandDTO(
-            Collections.singletonList(new BasketItemCommandDTO("", "john@mail.com"))
+            List.of(new BasketItemCommandDTO("", john.getEmail()))
         );
         checkBadRequestWhenCreating(command);
     }
@@ -76,7 +114,95 @@ class BasketControllerTest {
     @Test
     void shouldNotCreateBasketWithItemWithUnexistingContact() throws Exception {
         BasketCommandDTO command = new BasketCommandDTO(
-            Collections.singletonList(new BasketItemCommandDTO("rosa", "john@mail.com"))
+            List.of(new BasketItemCommandDTO("rosa", "unexisting@mail.com"))
+        );
+        checkBadRequestWhenCreating(command);
+    }
+
+    @Test
+    void shouldNotCreateBasketWithInvalidCustomer() throws Exception {
+        CustomerCommandDTO customer =
+            new CustomerCommandDTO(
+                "validName",
+                "notAnEmail",
+                "address",
+                CustomerType.FARMER
+            );
+
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(new BasketItemCommandDTO("rosa", john.getEmail())),
+            customer,
+            "rationale",
+            false
+        );
+        checkBadRequestWhenCreating(command);
+    }
+
+    @Test
+    void shouldNotCreateBasketWithInvalidQuantity() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(new BasketItemCommandDTO("rosa", john.getEmail(), 0))
+        );
+        checkBadRequestWhenCreating(command);
+    }
+
+    @Test
+    void shouldNotCreateCompleteBasketWithIncompleteCustomer() throws Exception {
+        List<CustomerCommandDTO> invalidCustomers = List.of(
+            new CustomerCommandDTO(
+                "",
+                "foo@bar.com",
+                "address",
+                CustomerType.FARMER
+            ),
+            new CustomerCommandDTO(
+                "validName",
+                null,
+                "address",
+                CustomerType.FARMER
+            ),
+            new CustomerCommandDTO(
+                "validName",
+                "notAnEmail",
+                "address",
+                CustomerType.FARMER
+            ),
+            new CustomerCommandDTO(
+                "validName",
+                "foo@bar.com",
+                "",
+                CustomerType.FARMER
+            ),
+            new CustomerCommandDTO(
+                "validName",
+                "foo@bar.com",
+                "",
+                null
+            )
+        );
+        for (CustomerCommandDTO customer : invalidCustomers) {
+            BasketCommandDTO command = new BasketCommandDTO(
+                List.of(new BasketItemCommandDTO("rosa", john.getEmail())),
+                customer,
+                "rationale",
+                true
+            );
+            checkBadRequestWhenCreating(command);
+        }
+    }
+
+    @Test
+    void shouldNotCreateCompleteBasketWithIncompleteQuantities() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(new BasketItemCommandDTO("rosa", john.getEmail())),
+            new CustomerCommandDTO(
+                "Jack",
+                "jack@mail.com",
+                "21 Jump street",
+                CustomerType.BIOLOGIST
+            ),
+            "rationale",
+            true
         );
         checkBadRequestWhenCreating(command);
     }
@@ -84,17 +210,12 @@ class BasketControllerTest {
     @Test
     void shouldCreateADraftBasket() throws Exception {
         BasketCommandDTO command = new BasketCommandDTO(
-            Arrays.asList(
-                new BasketItemCommandDTO("rosa", "john@mail.com"),
-                new BasketItemCommandDTO("violetta", "john@mail.com"),
-                new BasketItemCommandDTO("amanita", "alice@mail.com")
+            List.of(
+                new BasketItemCommandDTO("rosa", john.getEmail()),
+                new BasketItemCommandDTO("violetta", john.getEmail()),
+                new BasketItemCommandDTO("amanita", alice.getEmail())
             )
         );
-
-        GrcContact john = new GrcContact();
-        GrcContact jack = new GrcContact();
-        when(mockGrcContactDao.findByEmail("john@mail.com")).thenReturn(Optional.of(john));
-        when(mockGrcContactDao.findByEmail("alice@mail.com")).thenReturn(Optional.of(jack));
 
         when(mockBasketDao.save(any())).thenAnswer(MoreAnswers.<Basket>firstArgWith(b -> b.setId(42L)));
 
@@ -117,28 +238,61 @@ class BasketControllerTest {
             .containsOnly(
                 tuple("rosa", john, savedBasket),
                 tuple("violetta", john, savedBasket),
-                tuple("amanita", jack, savedBasket)
+                tuple("amanita", alice, savedBasket)
             );
     }
 
     @Test
+    void shouldCreateACompleteBasket() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(
+                new BasketItemCommandDTO("rosa", john.getEmail(), 1),
+                new BasketItemCommandDTO("violetta", john.getEmail(), 2),
+                new BasketItemCommandDTO("amanita", alice.getEmail(), 3)
+            ),
+            new CustomerCommandDTO(
+                "Jack",
+                "jack@mail.com",
+                "21 Jump street",
+                CustomerType.BIOLOGIST
+            ),
+            "because...",
+            true
+        );
+
+        when(mockBasketDao.save(any())).thenAnswer(MoreAnswers.<Basket>firstArgWith(b -> b.setId(42L)));
+
+        mockMvc.perform(post("/api/baskets")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsBytes(command)))
+               .andExpect(status().isCreated())
+               .andExpect(jsonPath("$.id").value(42L))
+               .andExpect(jsonPath("$.reference").isNotEmpty())
+               .andExpect(jsonPath("$.status").value(BasketStatus.SAVED.name()));
+
+        ArgumentCaptor<Basket> basketCaptor = ArgumentCaptor.forClass(Basket.class);
+        verify(mockBasketDao).save(basketCaptor.capture());
+
+        Basket savedBasket = basketCaptor.getValue();
+        assertThat(savedBasket.getCreationInstant()).isNotNull();
+        assertThat(savedBasket.getItems()).hasSize(3);
+        assertThat(savedBasket.getItems())
+            .extracting(BasketItem::getAccession, BasketItem::getContact, BasketItem::getQuantity, BasketItem::getBasket)
+            .containsOnly(
+                tuple("rosa", john, 1, savedBasket),
+                tuple("violetta", john, 2, savedBasket),
+                tuple("amanita", alice, 3, savedBasket)
+            );
+        assertThat(savedBasket.getStatus()).isEqualTo(BasketStatus.SAVED);
+        assertThat(savedBasket.getCustomer()).isEqualTo(new Customer(command.getCustomer().getName(),
+                                                                     command.getCustomer().getEmail(),
+                                                                     command.getCustomer().getAddress(),
+                                                                     command.getCustomer().getType()));
+        assertThat(savedBasket.getRationale()).isEqualTo(command.getRationale());
+    }
+
+    @Test
     void shouldGet() throws Exception {
-        Basket basket = new Basket(42L);
-        basket.setReference("ref");
-        basket.setStatus(BasketStatus.DRAFT);
-        basket.setCustomer(new Customer("jb", "jb@mail.com", "Saint Just", CustomerType.FARMER));
-        basket.setRationale("why not?");
-        BasketItem rosa = new BasketItem(5L);
-        rosa.setAccession("rosa");
-        rosa.setQuantity(2);
-        basket.addItem(rosa);
-
-        BasketItem violetta = new BasketItem(3L);
-        violetta.setAccession("violetta");
-        violetta.setQuantity(null);
-        basket.addItem(violetta);
-        when(mockBasketDao.findByReference(basket.getReference())).thenReturn(Optional.of(basket));
-
         mockMvc.perform(get("/api/baskets/{reference}", basket.getReference()))
                .andExpect(status().isOk())
                .andExpect(jsonPath("$.id").value(basket.getId()))
@@ -157,8 +311,85 @@ class BasketControllerTest {
                .andExpect(jsonPath("$.items[1].quantity").isEmpty());
     }
 
+    @Test
+    void shouldNotUpdateANonDraftBasket() throws Exception {
+        basket.setStatus(BasketStatus.SAVED);
+
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(new BasketItemCommandDTO("rosa", 5))
+        );
+        checkBadRequestWhenUpdating(command);
+    }
+
+    @Test
+    void shouldNotUpdateADraftBasketWithContactEmails() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(new BasketItemCommandDTO("rosa", "john@mail.com"))
+        );
+        checkBadRequestWhenUpdating(command);
+    }
+
+    @Test
+    void shouldUpdateADraftBasket() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(
+                new BasketItemCommandDTO(rosa.getAccession(), 5),
+                new BasketItemCommandDTO(violetta.getAccession(), 10)
+            )
+        );
+
+        mockMvc.perform(put("/api/baskets/{reference}", basket.getReference())
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsBytes(command)))
+               .andExpect(status().isNoContent());
+
+        assertThat(rosa.getQuantity()).isEqualTo(5);
+        assertThat(violetta.getQuantity()).isEqualTo(10);
+        assertThat(basket.getStatus()).isEqualTo(BasketStatus.DRAFT);
+    }
+
+    @Test
+    void shouldUpdateAndSaveADraftBasket() throws Exception {
+        BasketCommandDTO command = new BasketCommandDTO(
+            List.of(
+                // rosa is removed
+                new BasketItemCommandDTO(violetta.getAccession(), 10)
+            ),
+            new CustomerCommandDTO(
+                "Jack",
+                "jack@mail.com",
+                "21 Jump street",
+                CustomerType.BIOLOGIST
+            ),
+            "because...",
+            true
+        );
+
+        mockMvc.perform(put("/api/baskets/{reference}", basket.getReference())
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsBytes(command)))
+               .andExpect(status().isNoContent());
+
+        assertThat(basket.getItems()).containsOnly(violetta);
+        assertThat(violetta.getQuantity()).isEqualTo(10);
+        assertThat(violetta.getContact()).isEqualTo(alice);
+        assertThat(basket.getStatus()).isEqualTo(BasketStatus.SAVED);
+        assertThat(basket.getCustomer()).isEqualTo(new Customer(command.getCustomer().getName(),
+                                                                command.getCustomer().getEmail(),
+                                                                command.getCustomer().getAddress(),
+                                                                command.getCustomer().getType()));
+        assertThat(basket.getRationale()).isEqualTo(command.getRationale());
+    }
+
     private void checkBadRequestWhenCreating(BasketCommandDTO command) throws Exception {
         mockMvc.perform(post("/api/baskets")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsBytes(command)))
+               .andExpect(status().isBadRequest());
+    }
+
+    private void checkBadRequestWhenUpdating(BasketCommandDTO command) throws Exception {
+        mockMvc.perform(put("/api/baskets/{reference}", basket.getReference())
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(objectMapper.writeValueAsBytes(command)))
                .andExpect(status().isBadRequest());
